tests/baselines/reference/declFileTypeAnnotationTupleType.errors.txt
declFileTypeAnnotationTupleType.ts(3,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== declFileTypeAnnotationTupleType.ts (1 errors) ====
    class c {
    }
    module m {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class c {
        }
        export class g<T> {
        }
    }
    class g<T> {
    }
    
    // Just the name
    var k: [c, m.c] = [new c(), new m.c()];
    var l = k;
    
    var x: [g<string>, m.g<number>, () => c] = [new g<string>(), new m.g<number>(), () => new c()];
    var y = x;